--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,51 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+ol,
+ul {
+  list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+p{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#categories{
+  display:flex;
+  flex-direction: column;
+  padding: 24px;
+  gap: 24px;
+  border-radius: 8px;
+}
+
+
+.item{
+  width: 392px;
+  height: 264px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #F6F6FE;
+}
+
+.item h2{
+  font-family: Montserrat;
+}
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+  width: 1128px;
+}
+.image-item{
+  display: block;
+  width: calc((100% - 48px) / 3);
+}
+
